Cherry-pick d7e2051a1f93. rdar://129612387

AX: Tables with show/hide rows report wrong counts and block access to some rows in VoiceOver
    https://bugs.webkit.org/show_bug.cgi?id=275366
    rdar://129612387

    Reviewed by Chris Fleizach.

    This happened because fundamentally, `AccessibilityTableRow::computeAccessibilityIsIgnored` did not
    respect hidden states at all (https://www.w3.org/TR/wai-aria/#dfn-hidden — display:none or visibility:hidden).
    We only got away with it for so long because `AXObjectCache::getOrCreate(Node& node, IsPartOfRelation isPartOfRelation)`
    limits the types of objects that can be created without a renderer, effectively blocking these hidden objects. Except
    it unconditionally creates objects that are part of a relantionship (like `aria-controls`):

    ```
    // If node is the target of a relationship or a descendant of one, create an AX object unconditionally.
    if (isPartOfRelation == IsPartOfRelation::No && !isDescendantOfRelatedNode(node)) {
        ...strict criteria to create a renderer-less object...
    }
    ```

    After this commit, `AccessibilityTableRow::computeAccessibilityIsIgnored` now properly respects hidden status, fixing
    the bug.

    * LayoutTests/accessibility/aria-controlled-table-row-visibility-expected.txt: Added.
    * LayoutTests/accessibility/aria-controlled-table-row-visibility.html: Added.
    * LayoutTests/platform/ios/TestExpectations: Enable new test.
    * LayoutTests/platform/ios/accessibility/aria-controlled-table-row-visibility-expected.txt: Added.
    * LayoutTests/platform/mac-wk1/TestExpectations: Skip new test.
    * Source/WebCore/accessibility/AccessibilityTableRow.cpp:
    (WebCore::AccessibilityTableRow::computeAccessibilityIsIgnored const):

    Canonical link: https://commits.webkit.org/282165@main

Canonical link: https://commits.webkit.org/280938.232@safari-7619-branch